--- a/angular.json
+++ b/angular.json
@@ -102,7 +102,12 @@
               "e2e/tsconfig.json"
             ],
             "exclude": [
-              "**/node_modules/**"
+              "**/node_modules/**",
+              "src/test.ts",
+              "src/polyfills.ts",
+              "e2e/src/app.e2e-spec.ts",
+              "src/**.spec.ts",
+              "e2e/src/app.po.ts"
             ]
           }
         },
